video duration and visibility bug fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -23,7 +23,7 @@ body {
 
 section {
   width: 100%;
-  height: calc(100dvh - 200px);
+  min-height: calc(100dvh - 200px);
 }
 
 .section-title {
